fix: overflow of about section

--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ aside{
 main{
     width:50vw;
 }
+
 header {
-    position: fixed;
     height: 4rem;
     padding: 0.5rem;
     background-color: #EDEDED;
@@ -29,6 +29,7 @@ header {
     align-items: center;
     justify-content: space-between;
 }
+/* <!-- Header of chatlist --> */
 #chat-list-header{
     width: 25vw;
 }
@@ -46,8 +47,10 @@ ul > li > a{
 }
 
 #contact-list-prompt{
-    padding: 4rem 0.5rem 1rem 0.5rem;
+    height: 6rem;
+    padding: 0rem 0.5rem 1rem 0.5rem;
     background-color: #9DE1FE;
+    overflow: hidden;
 }
 #contact-list-prompt-close{
     padding-top: 0.25rem;
@@ -63,6 +66,7 @@ ul > li > a{
 }
 
 #contact-search-bar{
+    height: 3rem;
     padding: 0.4rem 0.5rem;
     border-bottom: 1px solid #EDEDED;
 }
@@ -134,8 +138,8 @@ ul > li > a{
     background-color: #EDEDED;
 }
 #chat-list{
-    height: calc(100vh - 12.4rem);
-    overflow: auto;
+    height: calc(100vh - 13rem);
+    overflow-y: auto;
 }
 .contact-name{
     font-weight: 700;
@@ -171,13 +175,15 @@ ul > li > a{
     width: 3rem ;
     margin: auto;   
 }
+/* Chat Section */
 #chat-section{
     background-color:#DDDBD1;
+    position: relative;
 }
 #chat-wrapper{
-    padding-top: 4rem;
-    height: calc(100vh - 4rem);
-    overflow: auto;
+    padding: 1rem;
+    height: calc(100vh - 8rem);
+    overflow-y: auto;
 }
 #messages{
     list-style-type: none;
@@ -229,6 +235,7 @@ li[sent=false]>article{
     font-size: large;
     margin: 0.5rem 1rem;
 }
+/* <!-- contact INfo --> */
 #contact-info-header{
     width: 25vw;
     justify-content: start;
@@ -237,15 +244,22 @@ li[sent=false]>article{
     font-weight: 700;
 }
 
+#about-section{
+    overflow-y: auto;
+    width: 25vw;
+    height: calc(100vh - 4rem);
+}
+
 figure{
-    margin-top: 4rem;
     border-bottom: 0.75rem #DCDCDC solid;
 }
 
 #contact-info-pfp{
+    display: block;
+    width: 80%;
+    aspect-ratio: 1/1;
     border-radius: 50%;
-    margin-top: 3rem;
-    margin-left: 8rem;
+    margin: 3rem auto;
 }
 figcaption{
     margin: 1rem;
@@ -260,6 +274,7 @@ figcaption{
     justify-content: space-between;
 }
 #images{
+    overflow-x: auto;
     padding: 0.5rem;
     display: flex;
     justify-content: space-around;
@@ -276,13 +291,13 @@ hr{
     padding: 1rem;
     text-align: center;
     z-index: 1;
-    position: fixed;
+    position: absolute;
     background-color: white;
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
     bottom: 5rem;
-    right: calc(25vw + 0.75rem);
+    right: 1rem;
 }
 #about-desc > p{
     padding: 1rem;
